# DinoAir

./: .coveragerc  .deepsource.toml  .eslintrc.json  .gitignore  .isort.cfg  .pre-commit-config.yaml.disabled  .prettierrc.json  API_TRACKER_README.md  CODEQL_SETUP_COMPLETE.md  CODEQL_V3_UPDATE.md  DEEPSOURCE_COVERAGE_COMPLETE.md  DEEPSOURCE_FIXES.md  DEEPSOURCE_SETUP_GUIDE.md  DOCSTRING_GENERATION_SUMMARY.md  DinoAir-VirtualEnv-Summary.md  DinoAir.code-workspace  ENHANCED_API_ARCHITECTURE.md  GITIGNORE_UPDATES.md  LINE_LENGTH_GUIDE.md  PYPDF2_VULNERABILITY_FIX_SUMMARY.md  SECURITY_POLICY.md  SECURITY_SECRETS.md  TEST_FILES_ARCHIVE_README.md  VS_CODE_PYTHON_FIX.md  activate-env.ps1  activate-venv.ps1  analyze-redundant-files.ps1  api-flow-dashboard.html  api-tracker-package.json  api-tracker.js  bandit-report.json  check_json1_support.py  check_token_scopes.py  cleanup-codeql.ps1  codeql-summary.ps1  comprehensive_docstring_generator.py  conftest.py  demo_improvements.py  dinoair_security_data.json  fix-vscode-python.ps1  (+66 more)
.github/: copilot-instructions.md  dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: codeql-analysis.yml  codeql.yml  coverage.yml
API_files/: .gitignore  __init__.py  __main__.py  app.py  errors.py  logging_config.py  metrics_state.py  requirements-dev.txt  requirements.txt  schemas.py  settings.py
API_files/api/: __main__.py
API_files/middleware/: __init__.py  auth.py  body_limit.py  content_type.py  request_id.py
API_files/routes/: __init__.py  ai.py  config.py  health.py  metrics.py  rag.py  router.py  search.py  translate.py
API_files/services/: __init__.py  common.py  mock_chat.py  rag.py  rag_context.py  rag_embeddings.py  rag_ingestion.py  rag_monitor.py  router_client.py  search.py  tool_schema_generator.py  translator.py
API_files/tests/: conftest.py  test_app_smoke.py  test_endpoints.py  test_input_processing_pipeline.py  test_input_processing_watchdog_and_strict.py  test_rag_endpoints.py
GUI/: MANIFEST - Copy.txt
api/services/: __init__.py  tool_schema_generator.py
config/: README.md  SECURITY.md  compatibility.py  demo_config.py  schema.json  services.lmstudio.yaml  services.yaml  test_config.py  versioned_config.py  window_state.json
core_router/: __init__.py  config.py  errors.py  health.py  registry.py  router.py  schemas.py
core_router/adapters/: lmstudio.py
core_router/examples/: services.example.yaml
database/: __init__.py  appointments_db.py  artifacts_db.py  factory.py  file_search_db.py  initialize_db.py  interfaces.py  notes_db.py  notes_repository.py  notes_security.py  notes_service.py  notes_validator.py  projects_db.py  resilient_db.py  sentry.py  tag_fallback.py  timers_db.py
database/migrations/: README.md  __init__.py  base.py  loader.py  runner.py
database/tests/: __init__.py  conftest.py  pytest.ini  test_appointments_db.py  test_artifacts_db.py  test_database_manager_integration.py  test_file_search_db.py  test_initialize_db.py  test_initialize_db_comprehensive.py  test_migration_loader.py  test_migration_simple.py  test_migrations.py  test_migrations_integration.py  test_notes_database_compat.py  test_notes_repository_real.py  test_notes_repository_schema_and_search.py  test_notes_security_unit.py  test_notes_service_integration_real.py  test_notes_service_unit.py  test_notes_system.py  test_notes_validator_unit.py  test_projects_db.py  test_resilient_db.py  test_schema_indexes.py  test_timers_db.py
docs/api/: index.md
docs/user_guide/: index.md
input_processing/: __init__.py  input_sanitizer.py  sanitizer_security_guide.md
models/: MODEL_SERIALIZATION_README.md  PYDANTIC_ATTRS_EVALUATION.md  __init__.py  artifact.py  artifact_v2.py  base.py  calendar_event.py  calendar_event_v2.py  demo_serialization.py  note.py  note_v2.py  project.py  simple_demo.py  watchdog_metrics.py
monitoring/: prometheus.yml
playwright-report/: index.html
rag/: __init__.py  context_provider.py  directory_validator.py  embedding_generator.py  enhanced_context_provider.py  factory.py  file_chunker.py  file_monitor.py  file_processor.py  optimized_file_processor.py  optimized_vector_search.py  search_common.py  secure_text_extractor.py  vector_search.py
routing/: __init__.py  config.py  errors.py  health.py  metrics.py  registry.py  router.py  schemas.py
scripts/: check_circular_dependencies.py  dependency_monitor.py  import_alerts.py  quick_cleanup.py  test_automation.py
src/: App.tsx  main.tsx
tests/: __init__.py  connection.spec.ts  diagnostics.spec.ts
tools/: README.md  TOOL_INVENTORY.md  basic_tools.py  file_search_tool.py  notes_tool.py  projects_tool.py
utils/: .gitignore  .readthedocs.yml  __init__.py  appointments.py  artifact_encryption.py  asgi.py  audit_logging.py  auth_system.py  colors.py  config_loader.py  dependency_container.py  dependency_enums.py  dependency_exceptions.py  dependency_globals.py  dependency_info.py  dependency_scope.py  dev_cleanup.py  dinoair_api.py  enhanced_logger.py  enums.py  error_handling.py  health_checker.py  log_sanitizer.py  logger.py  logging_examples.py  network_security.py  optimization_utils.py  performance_monitor.py  process.py  progress_indicators.py  pyproject.toml  pytest.ini  resource_manager.py  run_tests.py  safe_expr.py  safe_pdf_extractor.py  scaling.py  security_config.py  smart_timer.py  sql.py  (+9 more)
utils/docs/: API_GUIDE.md  ENHANCEMENT_SUMMARY.md  api.rst  conf.py  index.rst  installation.rst  requirements.txt  usage.rst
utils/tests/: README.md  test_appointments.py  test_artifact_encryption.py  test_colors.py  test_config_loader.py  test_dependency_container.py  test_dinoair_api.py  test_enhanced_logger.py  test_enhanced_security.py  test_enums.py  test_error_handling.py  test_health_checker.py  test_log_sanitizer.py  test_logger.py  test_optimization_utils.py  test_performance_monitor.py  test_process.py  test_report.txt  test_resource_manager.py  test_runner.py  test_safe_expr.py  test_safe_pdf_extractor.py  test_safe_pdf_extractor_fuzz.py  test_scaling.py  test_sql.py  test_state_machine.py  test_window_state.py
(+233 files in other folders)
