[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "utils"
version = "0.1.0"
dependencies = [
    "aiofiles>=23.0.0,<24.0.0",
    "cryptography>=40.0.0,<47.0.0",
    "starlette>=0.27.0,<0.49.0",
    "httpx>=0.25.0,<0.26.0",
    "redis>=5.0.0,<6.0.0",
    "asyncpg>=0.29.0,<0.30.0",
    "pypdf>=6.0.0,<7.0.0",
    "PySide6>=6.5.0,<7.0.0",
    "psutil>=5.9.0,<6.0.0"
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pylint>=2.15.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.2.0"
]

[tool.setuptools.packages.find]
where = ["."]

[tool.hatch.build.targets.wheel]
packages = ["."]

# Note: Tool configurations (black, mypy, etc.) are inherited from the main pyproject.toml
# This prevents circular dependency issues with pre-commit hooks
